--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <title>Create Through Fascination</title>
+    <title>Nicholas R. Kolodziej</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
